Added a drawing resembling me

--- a/styles/main.css
+++ b/styles/main.css
@@ -87,6 +87,9 @@ footer {
   display: block;
 }
 
+#funnypic {
+  margin: auto;
+}
 /* Below is the css for grid area declaration */
 .home {
   grid-area: home;
