--- a/styles/main.css
+++ b/styles/main.css
@@ -89,8 +89,39 @@ footer {
   display: block;
 }
 
-.funnypic {
+#funnypic {
   margin: auto;
+}
+
+#TH-image {
+  height: auto;
+  width: 14rem;
+  margin: auto;
+  margin-top: 7rem;
+}
+
+#CBM-image {
+  border-radius: 1rem;
+  height: auto;
+  width: 13rem;
+  margin: auto;
+  margin-top: 8rem;
+}
+
+.css-examples {
+  border: 2px solid black;
+  height: 16rem;
+  width: auto;
+  margin: auto;
+}
+
+.code-example {
+  border: 1px solid black;
+  border-radius: 7px;
+  color: rgb(233, 233, 233);
+  background-color: rgb(49, 49, 49);
+  padding: 0px 5px 0px 5px;
+  margin: 2px;
 }
 
 /* Below is the css for grid area declaration */
@@ -165,6 +196,16 @@ p {
     width: 16rem;
   }
 
+  #TH-image {
+    width: 16rem;
+    margin-top: 5rem;
+  }
+
+  #CBM-image {
+    width: 14rem;
+    margin-top: 5rem;
+  }
+
   .page-content {
     margin-left: 5rem;
     margin-right: 5rem;
@@ -210,6 +251,18 @@ p {
   .article-button {
     grid-area: a-button;
     margin: 1rem;
+  }
+
+  #TH-image {
+    width: 18rem;
+    margin-top: 4rem;
+    margin-bottom: 2rem;
+  }
+
+  #CBM-image {
+    width: 17rem;
+    margin-top: 5rem;
+    margin-bottom: 2rem;
   }
 
   .center {
