Added Comic Sans to font family

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Comic Sans MS', monospace;
+  font-family: 'Comic Sans MS', 'Comic Sans', monospace;
   text-align: center;
   margin: auto;
   box-sizing: border-box;
