--- a/styles/main.css
+++ b/styles/main.css
@@ -179,6 +179,17 @@ h3 {
   margin-top: 9rem;
 }
 
+#JSD-image {
+  height: auto;
+  width: 13rem;
+  margin: 9rem auto 1rem;
+}
+
+#JSB-example {
+  display: block;
+  margin: auto;
+}
+
 /*--------------------------------------------------*/
 /* Tablet view of webpage*/
 @media only screen and (min-width: 48rem) {
@@ -214,6 +225,11 @@ h3 {
   #CBM-image {
     width: 14rem;
     margin-top: 5rem;
+  }
+
+  #JSD-image {
+    width: 13rem;
+    margin: 5rem auto 1rem;
   }
 
   .page-content {
@@ -269,6 +285,10 @@ h3 {
     width: 14rem;
     margin-top: 5rem;
     margin-bottom: 2rem;
+  }
+
+  #JSD-image {
+    margin: 5rem auto 2rem;
   }
 
   .center {
